# myCMakeTest

./: CMakeLists.txt  README.md  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
build2/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
build2/MathFunctions/: Makefile
